syntax = "proto3";

package streaming;

option csharp_namespace = "stdiscm_PS3";

// For uploading
service VideoUploadService {
  rpc UploadVideo(stream VideoUploadRequest) returns (VideoUploadResponse);
}

service VideoLibraryService {
  rpc ListVideos (ListVideosRequest) returns (ListVideosResponse);
}

message VideoUploadRequest {
  oneof request {
    VideoMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message VideoMetadata {
  string file_name = 1;
  string file_type = 2;
  int64 file_size_bytes = 3;
  string upload_id = 4;
  string checksum_sha256 = 5;
  int64 timestamp = 6;
}

message VideoUploadResponse {
  bool success = 1;
  string message = 2;
  string video_id = 3;
  string playback_url = 4;
}

// For streaming

service VideoLibraryService {
  rpc ListVideos(ListVideosRequest) returns (ListVideosResponse);
}

message ListVideosRequest {}

message VideoInfo {
  string video_id = 1;
  string file_name = 2;
  int64 size_in_bytes = 3;
  string playback_url = 4;
  int64 uploaded_utc_unix = 5;
}

message ListVideosResponse {
  repeated VideoInfo videos = 1;
}
